modifying index.html

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ higher similarity over the strong baseline that achieved first place in Voice Co
 conducted ablation studies to confirm several designation in our proposed method.
 <p>&nbsp;</p>
 <hr>
-<h3>0. Ground truth target samples</h3>
+<h3>0. Ground truth audio samples</h3>
 <table border="1">
   <tr>
   <td width="120px">&nbsp;
@@ -76,7 +76,7 @@ conducted ablation studies to confirm several designation in our proposed method
 </table>
 
 <h3>&nbsp;</h3>
-<h3>1. Comparsion of proposed method to baseline methods</h3>
+<h3>1. Comparsion of the proposed method to baseline methods</h3>
 <p>&nbsp;</p>
 <table border="1">
   <tr>
@@ -107,7 +107,7 @@ conducted ablation studies to confirm several designation in our proposed method
   </tr>
 </table>
 <p>&nbsp;</p>
-<h3>2. Reducing size of training data for adaptation</h3>
+<h3>2. Reducing the size of training data for fine-tuing</h3>
 <table border="1">
   <tr>
     <td width="120px"><div align="center">Size of data</div></td>
@@ -137,7 +137,7 @@ conducted ablation studies to confirm several designation in our proposed method
   </tr>
 </table>
 <p>&nbsp;</p>
-<h3>3.Ablation studies</h3>
+<h3>3. Ablation studies</h3>
 <table border="1">
   <tr>
     <td width="140"><div align="center">Methods</div></td>
@@ -201,7 +201,7 @@ conducted ablation studies to confirm several designation in our proposed method
     <td><audio src="wavs/slt-to-rms/ablation/fixenc-Wav_arctic_b0496_ref_rms.wav" controls="controls"> Your browser does not support the audio tag. </audio></td>
   </tr>
 </table>
-<p>&quot;<em>-adv</em>&quot;,  &quot;<em>-text</em>&quot; represent the proposed method without using adversarial training,  text classification loss respectively. &quot;<em>-pre-training</em>&quot; represents the proposed method without using pre-training strategy. &quot;<em>-GAN</em>&quot; represents the proposed method finetuning without  GAN loss. &quot;<em>-joint</em>&quot;represents training the recognizer and synthesizer separately without joint optimization. &quot;<em>fixrec</em>&quot; represents fix the recognizer after pre-training and only fine-tuning the synthesizer.</p>
+<p>&quot;<em>-adv</em>&quot;,  &quot;<em>-text</em>&quot; represent the proposed method without using adversarial training,  text classification loss respectively. &quot;<em>-pre-training</em>&quot; represents the proposed method without using pre-training strategy. &quot;<em>-GAN</em>&quot; represents the proposed method finetuning without  the GAN loss. &quot;<em>-joint</em>&quot;represents training the recognizer and synthesizer separately without joint optimization. &quot;<em>fixrec</em>&quot; represents fix the recognizer after pre-training and only fine-tuning the synthesizer.</p>
 <p>&nbsp;</p>
 
 
