--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@ conducted ablation studies to confirm several designation in our proposed method
     <td width="173"><audio src="wavs/slt-to-rms/ablation/no-pretrain-Wav_arctic_b0496_ref_rms.wav" controls="controls"> Your browser does not support the audio tag. </audio></td>
   </tr>
   <tr>
-    <td><div align="center"><em>fixrec</em></div></td>
+    <td><div align="center"><em>fix-rec</em></div></td>
     <td><audio src="wavs/rms-to-slt/ablation/fixenc-Wav_arctic_a0058_ref_slt.wav" controls="controls"> Your browser does not support the audio tag. </audio></td>
     <td><audio src="wavs/rms-to-slt/ablation/fixenc-Wav_arctic_a0138_ref_slt.wav" controls="controls"> Your browser does not support the audio tag. </audio></td>
     <td><audio src="wavs/slt-to-rms/ablation/fixenc-Wav_arctic_b0247_ref_rms.wav" controls="controls"> Your browser does not support the audio tag. </audio></td>
@@ -201,7 +201,7 @@ conducted ablation studies to confirm several designation in our proposed method
     <td><audio src="wavs/slt-to-rms/rec-syn/Wav_b0496_ref_rms.wav" controls="controls"> Your browser does not support the audio tag. </audio></td>
   </tr>
 </table>
-<p>&quot;<em>-adv</em>&quot;,  &quot;<em>-text</em>&quot; represent the proposed method without using adversarial training,  text classification loss respectively. &quot;<em>-pre-training</em>&quot; represents the proposed method without using pre-training strategy. &quot;<em>-GAN</em>&quot; represents the proposed method finetuning without  the GAN loss. &quot;<em>-joint</em>&quot; represents training the recognizer and synthesizer separately without joint optimization. &quot;<em>fixrec</em>&quot; represents fix the recognizer after pre-training and only fine-tuning the synthesizer. <em>&quot;rec-syn</em>&quot; represents the conventional recognition-synthesis method that uses the same structure and training data as the proposed method</p>
+<p>&quot;<em>-adv</em>&quot;,  &quot;<em>-text</em>&quot; represent the proposed method without using adversarial training,  text classification loss respectively. &quot;<em>-pre-training</em>&quot; represents the proposed method without using pre-training strategy. &quot;<em>-GAN</em>&quot; represents the proposed method finetuning without  the GAN loss. &quot;<em>-joint</em>&quot; represents training the recognizer and synthesizer separately without joint optimization. &quot;<em>fix-rec</em>&quot; represents fix the recognizer after pre-training and only fine-tuning the synthesizer. <em>&quot;rec-syn</em>&quot; represents the conventional recognition-synthesis method that uses the same structure and training data as the proposed method</p>
 <p>&nbsp;</p>
 
 
